Adding link to transport quote
I'll eventually implement it directly into the webpage. Adding the hyperlink temporarily. Will change later

--- a/quick-calculations.html
+++ b/quick-calculations.html
@@ -47,7 +47,8 @@
         <h3>This section will be available for anything you may need at a moments notice. For example:</h3> 
         <ul>
             <li>
-                transport quotes
+                <!-- TODO: implement this calculator directly into the page-->
+                <a href="https://ktromp1.github.io/iconic-test-quotes/" target="_blank">transport quotes<a>
             </li>
             <li>
                 shipping quotes
